cmake_minimum_required(VERSION 3.22)
project(hello-vulkan-hpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (MSVC)
    set(COMPILER_NAME "msvc")
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    set(COMPILER_NAME "clang")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    set(COMPILER_NAME "gcc")
else ()
    set(COMPILER_NAME "unknown_compiler")
endif ()

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(BUILD_MODE "debug")
elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
    set(BUILD_MODE "release")
else ()
    set(BUILD_MODE "")
endif ()

set(CMAKE_BIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/bin/${COMPILER_NAME}/${BUILD_MODE}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BIN_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BIN_DIR})

add_subdirectory(src)
add_subdirectory(external)